# music-platform

./: Cargo.toml
migrations/: 20260628031045_table.sql
src/: dtos.rs  models.rs
