[package]
name = "music_platform_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
lazy_static = "1.4"
regex = "1.11.0"
chrono = { version = "0.4.26", features = ["serde"] }
sqlx = { version = "0.8.1", features = ["runtime-async-std", "postgres", "chrono", "uuid"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
dotenv = "0.15.0"